# typo-maker

./: LICENSE  README.md  pyproject.toml
typo_maker/: helpers.py  maker.py
