[tool.poetry]
name = "typo-maker"
version = "0.1.0"
description = "Typo generator for words and word sequences"
authors = ["Ugo Loobuyck <ugo.loobuyck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aenum = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
